# predictor

./: .gitignore  README.md  analysis.py  api.py  model.pkl  model.py  phases.py  phases_cpc.csv  phases_cpi.csv  purchases.csv  purchases.py
api/: api.py  cpx-prediction-dev-template-1547055331.json  model.pkl  model_columns.pkl  pyproject.toml  requirements.txt
api/ec2/: app.py  app.wsgi  requirements.txt
api/static/css/: custom.css
api/templates/: base.html  index.html
api/zappa/: api.py  requirements.txt
model/: analysis.py  appendix.py  backward_elimination.py  cost_per_click_columns.pkl  cost_per_click_model.pkl  cost_per_impression_columns.pkl  cost_per_impression_model.pkl  cpc_columns.pkl  cpc_model.pkl  cpc_model.py  cpi_columns.pkl  cpi_model.pkl  cpi_model.py  first_glance.py  helpers.py  importance.py  impressions.csv  model.py  phases_cpc.csv  phases_cpi.csv  preprocessing.py  pyproject.toml  regression.py  requirements.txt  training.py  transfer.py  visualization.py
model/appendix/: feature_importance.py
