[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
zappa = "^0.52"
pandas = "^1.1"
joblib = "^1.0"
sklearn = "^0.0"
scikit-learn = "^0.23.2"  # latest version supported by scikit-optimize as of now

[tool.poetry.dev-dependencies]
python-dotenv = "^0.17"
flake8 = "^3.8"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
