[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2"
zappa = "^0.56"
pandas = "^1.1"
joblib = "^1.0"
sklearn = "^0.0"
scikit-learn = "^0.23"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.21"
flake8 = "^5.0"
coverage = "^6.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
