[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9.16"
flask = "^2.2"
zappa = "^0.57"
pandas = "^2.0"
joblib = "^1.0"
scikit-learn = "^1.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^1.0"
flake8 = "^6.0"
coverage = "^7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
