[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
psycopg2-binary = "^2.8.5"
boto3 = "^1.14.55"
joblib = "^0.16.0"
sklearn = "^0.0"
xgboost = "^1.2.0"
catboost = "^0.24.1"
scikit-optimize = "^0.8.1"
statsmodels = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
