[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1"
psycopg2-binary = "^2.8"
boto3 = "^1.14"
joblib = "^1.0"
sklearn = "^0.0"
scikit-learn = "^1.1"
scikit-optimize = "^0.9"
statsmodels = "^0.13"
# xgboost = "^1.2"  # does not work on apple silicon (m1)
# catboost = "^0.24"  # does not work on apple silicon (m1)

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
