[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9.16"
pandas = "^2.0"
psycopg2 = "^2.9"
boto3 = "^1.14"
joblib = "^1.0"
scikit-learn = "^1.2"
scikit-optimize = "^0.9"
statsmodels = "^0.14"
# xgboost = "^1.2"  # does not work on apple silicon (m1)
# catboost = "^0.24"  # does not work on apple silicon (m1)

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
